<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    
    tools:context=".MainActivity" >

    <ImageButton
        android:id="@+id/butInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/butstream"
        android:layout_alignLeft="@+id/butstream"
        android:background="@null"
        android:contentDescription="@string/but_info"
        android:src="@drawable/ic_action_about" />

    <ImageButton
        android:id="@+id/butnews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/butInfo"
        android:layout_alignLeft="@+id/butInfo"
        android:background="@null"
        android:contentDescription="@string/but_newsletter"
        android:src="@drawable/ic_action_email" />

    <ImageButton
        android:id="@+id/butevent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/butart"
        android:layout_alignLeft="@+id/butart"
        android:background="@null"
        android:contentDescription="@string/but_events"
        android:src="@drawable/ic_action_event" />

    <ImageButton
        android:id="@+id/butart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/butnews"
        android:layout_alignLeft="@+id/butnews"
        android:background="@null"
        android:contentDescription="@string/but_artistes"
        android:src="@drawable/ic_action_map" />

    <ImageButton
        android:id="@+id/butcont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/butevent"
        android:layout_alignLeft="@+id/butevent"
        android:background="@null"
        android:contentDescription="@string/but_contact"
        android:src="@drawable/ic_action_chat" />

    <ImageButton
        android:id="@+id/butstream"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="90dp"
        android:layout_marginRight="30dp"
        android:background="@null"
        android:contentDescription="@string/but_stream"
        android:src="@drawable/ic_action_camera" />

    <ImageButton
        android:id="@+id/butiti"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/butcont"
        android:layout_alignLeft="@+id/butcont"
        android:background="@null"
        android:contentDescription="@string/but_itineraire"
        android:src="@drawable/ic_action_person" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:layout_toLeftOf="@+id/butInfo"
        android:src="@drawable/icone"
        android:contentDescription="@string/app_name" />

</RelativeLayout>